// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Button: should be able to change theme 1`] = `
.c0 {
  background: #240768;
  border-radius: .5em;
  color: white;
  display: inline-block;
  font-size: 3em;
  -webkit-transition: 200ms;
  transition: 200ms;
}

.c0:hover {
  background: #44168b;
}

<div
  className="c0"
/>
`;

exports[`components/Button: should be able to change theme 2`] = `
.c0 {
  background: #ce7642;
  border-radius: .5em;
  color: white;
  display: inline-block;
  font-size: 3em;
  -webkit-transition: 200ms;
  transition: 200ms;
}

.c0:hover {
  background: #e3640d;
}

<div
  className="c0"
/>
`;
